--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -21,6 +21,13 @@
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
         </ul>
+        <div class="burger">
+            <div class="lin1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
+
+    <script src="/JAVASCRIPT/app.js"></script>
 </body>
 </html>
