--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -22,7 +22,7 @@
             <li><a href="#">4</a></li>
         </ul>
         <div class="burger">
-            <div class="lin1"></div>
+            <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
