--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -9,8 +9,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <title>Name</title>
+
+    <link rel="stylesheet" href="/CSS/swiper-bundle.min.css">
+
 </head>
+<header>
+    
+</header>
 <body>
+
     <nav>
         <div class="logo">
             <h4>Name</h4>
@@ -27,6 +34,10 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <script src="/JAVASCRIPT/app.js"></script>
+
+
+<script src="/JAVASCRIPT/app.js"></script>
+<script src="/JAVASCRIPT/swiper-bundle.min.js"></script>
+
 </body>
 </html>
