--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -20,8 +20,8 @@
             <h4>Name</h4>
         </div>
         <ul class="nav-links">
+            <li><a href="/HTML/contactpage.html">Kontakt</a></li>
             <li><a href="#">2</a></li>
-            <li><a href="#">1</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
         </ul>
@@ -72,17 +72,19 @@
             <h3>Name_Teil1<span>Name_Teil2</span></h3>
 
             <p class="footer-links">
-                <a href="#">Startseite</a>
+                <a href="/HTML/homepage.html">Startseite</a>
                 |
                 <a href="#"></a>
                 
-                <a href="#">Kontakt</a>
+                <a href="/HTML/contactpage.html">Kontakt</a>
                 
                 <a href="#"></a>
             </p>
 
             <p class="footer-company-name">Copyright © 2023 <strong>Name</strong> All rights reserved</p>
         </div>
+
+
 
         <div class="footer-center">
             <div>
